refactor: migrate from YAML config to .env configuration
- Replace pyyaml dependency with python-dotenv
- Update get_config() to read environment variables from .env file
- Add .env.sample template with example configuration
- Update documentation in README.md and CLAUDE.md
- Fix tests to work with new configuration system
- Add version argument support to CLI
- Update Makefile with version bump commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ build-backend = "hatchling.build"
 
 [project]
 name = "tgfolder_export"
-version = "0.0.1"
+version = "0.1.0"
 description = "Export Telegram folder contents as JSON"
 readme = "README.md"
 license = {text = "MIT"}
 authors = [{name = "AABur"}]
 requires-python = ">=3.11"
 dependencies = [
-    "pyyaml",
+    "python-dotenv",
     "telethon",
 ]
 
