--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,6 @@
 
 app_api_id=12345678
 app_api_hash=your_api_hash_here
+
+# Session file path (optional, defaults to var/tg.session)
+tg_session_path=var/tg.session
