docs: update documentation to reflect current implementation
- Fix outdated make command references (ruff -> lint)
- Remove non-existent build command from CLAUDE.md
- Update architecture description with new features
- Add LOG_LEVEL environment variable to .env.sample
- Remove temporary export file from tracking

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,7 @@ app_api_hash=your_api_hash_here
 
 # Session file path (optional, defaults to var/tg.session)
 tg_session_path=var/tg.session
+
+# Logging level (optional, defaults to INFO)
+# Options: DEBUG, INFO, WARNING, ERROR
+LOG_LEVEL=INFO
